--- a/src/main/resources/templates/vegan.html
+++ b/src/main/resources/templates/vegan.html
@@ -7,10 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <title>How to make a Vegan Scone </title>
 </head>
-<body>
-<h1 class="demo">How to make Vegan Scones</h1>
-<img class="images" src="/images/garlic.jpg" alt="vegan" width=400 height=300/>
-<!--<img class="images" src="/images/autumnsheep.jpg" alt="Autumn Sheep" width=400 height=300/>-->
+<body id="topdis">
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
@@ -18,14 +15,31 @@
             <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item active">
-            <a class="nav-link" href="vegan">Vegan Scones</a>
+            <a class="nav-link" href="/vegan">Vegan Scones</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/garlic">Garlic</a>
         </li>
-
+        <li class="nav-item">
+            <a class="nav-link" href="/rowgrid">Row Grid</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/columngrid">Column Grid</a>
+        </li>
     </ul>
 </nav>
+<div>
+
+<img class="images" src="/images/vegan.jpg" alt="vegan" width=400 height=300/>
+<!--<img class="images" src="/images/autumnsheep.jpg" alt="Autumn Sheep" width=400 height=300/>-->
+    <br/><br/>
+    <h1 class="demo">How to make Vegan Scones</h1>
+    <br/>
+</div>
+    <p class="ptext">This is text for page vegan.html. Any Text File is a program to read text files. .</p><br/>
+<p class="ptext" >The project of how to make vegan scones is instructed by Ms. Sue. Thanks for her support.</p>
+
+
 <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
