--- a/src/main/resources/templates/garlic.html
+++ b/src/main/resources/templates/garlic.html
@@ -5,27 +5,37 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/style/myCss.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
-    <title>How to make a Vegan Scone </title>
+
     <title>How to plant garlic</title>
 </head>
-<body>
-<h1 class="demo">How to Plant Garlic</h1>
-<img class="images" src="/images/garlic.jpg" alt="Garlic" width=400 height=300/>
-<!--<img class="images" src="/images/autumnsheep.jpg" alt="Autumn Sheep" width=400 height=300/>-->
+<body id="topdis">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
         <li class="nav-item ">
             <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item ">
-            <a class="nav-link" href="vegan">Vegan Scones</a>
+            <a class="nav-link" href="/vegan">Vegan Scones</a>
         </li>
         <li class="nav-item active">
             <a class="nav-link" href="/garlic">Garlic</a>
         </li>
-
+        <li class="nav-item">
+            <a class="nav-link" href="/rowgrid">Row Grid</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/columngrid">Column Grid</a>
+        </li>
     </ul>
 </nav>
+<div>
+<h1 class="demo">How to Plant Garlic</h1>
+    <br/>
+    <p class="ptext">The project of how to plant garlic is organized by Ms. Betty. We appreciate her volunteer work.</p><br/>
+<img class="images" src="/images/garlic.jpg" alt="Garlic" width=400 height=300/>
+<!--<img class="images" src="/images/autumnsheep.jpg" alt="Autumn Sheep" width=400 height=300/>-->
+</div>
+
 
 <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
